# AstroShell

./: .gitignore  CMakeLists.txt
clearlightcurve/: CMakeLists.txt  main.cpp
fourier/: CMakeLists.txt  fourier.cpp  fourier.h  main.cpp
getcolor/: CMakeLists.txt  getcolor.cpp  getcolor.h  main.cpp
getogleid/: CMakeLists.txt  main.cpp
getperiod/: CMakeLists.txt  Methods.cpp  Methods.h  getperiod.cpp  getperiod.h  main.cpp
mergecurve/: CMakeLists.txt  main.cpp  mergecurve.cpp  mergecurve.h
phase/: CMakeLists.txt  main.cpp  phase.cpp  phase.h
