cmake_minimum_required(VERSION 3.20)
project(AstroShell)

set(CMAKE_CXX_STANDARD 17)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

if (UNIX)
    add_compile_options(-Wall -Wextra -Ofast -pedantic -std=c++17 -march=native -DNDEBUG)
    set(INCLUDE_DIR /home/users/mglowacki/apps)
    include_directories(${INCLUDE_DIR})
elseif(MSVC)
    add_compile_definitions(_USE_MATH_DEFINES)
    set(CMAKE_PREFIX_PATH "C:/Programming/Eigen/install/share/eigen3/cmake")
    find_package(Eigen3)
    set(INCLUDE_DIR "C:/Users/Maks/CLionProjects/")
    include_directories(${INCLUDE_DIR} ${EIGEN3_INCLUDE_DIRS})
    add_compile_options(/O2 /std:c++17 /arch:AVX /arch:AVX512 /DNDEBUG)
endif()

add_executable(AstroShell main.cpp)

add_subdirectory(fourier)
add_subdirectory(getogleid)
add_subdirectory(clearlightcurve)
add_subdirectory(getperiod)
add_subdirectory(phase)
add_subdirectory(mergecurve)
add_subdirectory(getcolor)